<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:layout_height="wrap_content">


	<RelativeLayout
		android:id="@+id/rl_calio"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/_10sdp">

		<TextView
			android:id="@+id/tv_itemName"
			style="@style/text_roboto_600wt_16sp1_black"
			android:layout_width="wrap_content"
			android:visibility="gone"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/_5sdp"
			android:text="@string/bill_details_pvc" />
		<View
			android:id="@+id/view_line"
			android:layout_width="match_parent"
			android:layout_marginTop="@dimen/_5sdp"
			android:layout_marginStart="@dimen/_5sdp"
			android:visibility="gone"
			android:layout_marginEnd="@dimen/_8sdp"
			android:layout_height="@dimen/_1sdp"
			android:layout_below="@+id/tv_itemName"
			android:background="@color/colorLineBar" />
	</RelativeLayout>


	<RelativeLayout
		android:id="@+id/rl_calioo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/rl_calio"
		android:layout_marginTop="@dimen/_10sdp">
		
		<TextView
			android:id="@+id/tv_calio"
			style="@style/text_roboto_400wt1_16sp_black"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/_5sdp"
			android:text="@string/bill_details_calio" />
		
		<TextView
			android:id="@+id/tv_calio_price"
			style="@style/text_roboto_700wt_16sp_black"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_marginEnd="@dimen/_10sdp"
			android:text="@string/bill_details_calio_max_price" />
		
		
		<View
			android:id="@+id/view_linem"
			android:layout_width="match_parent"
			android:layout_marginTop="@dimen/_5sdp"
			android:layout_marginStart="@dimen/_5sdp"
			android:layout_marginEnd="@dimen/_8sdp"
			android:layout_height="@dimen/_1sdp"
			android:layout_below="@+id/tv_calio_price"
			android:background="@color/colorLineBar" />
	
	</RelativeLayout>

</LinearLayout>